# wishlist-api

./: .env.docker  Dockerfile  Dockerfile.redis-init  README.md  docker-compose.yaml  mock_products.json  pyproject.toml
migrations/: env.py
migrations/versions/: 026fd70e59b0_create_users_table.py  89c7546212bf_add_review_score_field_to_products_table.py  8fb2a66497ca_create_wishlists_table.py  f919a5ffcc9b_create_products_table.py
scripts/: init_redis.py
src/: app.py
src/core/: circuit_breaker.py  db.py  redis.py  security.py  settings.py
src/models/: __init__.py  product.py  user.py  wishlist.py
src/routers/: auth.py  user.py  wishlist.py
src/schemas/: common.py  product.py  user.py  wishlist.py
src/services/: auth.py  product.py  user.py  wishlist.py
tests/: conftest.py  factories.py  test_db.py  test_product.py  test_security.py  test_user.py  test_wishlist.py
